--- a/#sources/scss/ui.scss
+++ b/#sources/scss/ui.scss
@@ -18,6 +18,13 @@ html {
 }
 body {
   font-family: Gilroy;
+  font-size: 14px;
+  @media (max-width: 767.98px) {
+    font-size: 13.5px;
+  }
+  @media (max-width: 480px) {
+    font-size: 13px;
+  }
 
   &::-webkit-scrollbar {
     width: 6px;
@@ -173,23 +180,26 @@ input,
   font-weight: 700;
 
   &_first {
-    font-size: 40px;
-    @media (max-width: 1200px) {
-      font-size: calc(30px + (40 - 30) * ((100vw - 320px) / (1200 - 320)));
+    font-size: 2.86em;
+    @media (max-width: 767.98px) {
+      font-size: 2.2em;
+    }
+    @media (max-width: 480px) {
+      font-size: 1.85em;
     }
   }
 
   &_second {
-    font-size: 26px;
-    @media (max-width: 1200px) {
-      font-size: calc(20px + (26 - 20) * ((100vw - 320px) / (1200 - 320)));
+    font-size: 1.86em;
+    @media (max-width: 480px) {
+      font-size: 1.54em !important;
     }
   }
 
   &_third {
-    font-size: 20px;
+    font-size: 1.43em;
     @media (max-width: 1200px) {
-      font-size: calc(16px + (20 - 16) * ((100vw - 320px) / (1200 - 320)));
+      font-size: 1.23em;
     }
   }
 }
@@ -374,7 +384,7 @@ input,
 
   &__crumb {
     font-family: Gilroy;
-    font-size: 13px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -458,9 +468,18 @@ input,
   padding: 20px 35px;
   border-radius: 20px;
   background: #fff;
-  @media (max-width: 1200px) {
-    padding-left: calc(16px + (35 - 16) * ((100vw - 320px) / (1200 - 320)));
-    padding-right: calc(16px + (35 - 16) * ((100vw - 320px) / (1200 - 320)));
+
+  @media (max-width: 991.98px) {
+    padding: 20px 30px;
+  }
+  @media (max-width: 767.98px) {
+    padding: 20px 26px;
+  }
+  @media (max-width: 667.98px) {
+    padding: 20px 22px;
+  }
+  @media (max-width: 667.98px) {
+    padding: 20px 16px;
   }
 
   box-shadow: 0px 0px 18px 0px rgba(164, 164, 164, 0.06);
@@ -477,9 +496,17 @@ input,
     display: grid;
     grid-template-columns: 104px auto;
     row-gap: 10px;
-    column-gap: 60px;
-    column-gap: calc(15px + (60 - 15) * ((100vw - 320px) / (667.98 - 320)));
+    column-gap: 50px;
     justify-content: center;
+  }
+  @media (max-width: 567.98px) {
+    column-gap: 40px;
+  }
+  @media (max-width: 480px) {
+    column-gap: 30px;
+  }
+  @media (max-width: 360px) {
+    column-gap: 20px;
   }
 
   &_small {
@@ -507,25 +534,24 @@ input,
     border-bottom: 1px solid #a5abb71a;
 
     @media (max-width: 1200px) {
-      padding-right: calc(
-        0px + (35 - 0) * ((100vw - 991.98px) / (1200 - 991.98))
-      );
-      gap: calc(40px + (60 - 40) * ((100vw - 991.98px) / (1200 - 991.98)));
+      padding-right: 35px;
+      gap: 60px;
+    }
+    @media (max-width: 1100px) {
+      padding-right: 24px;
+      gap: 50px;
+    }
+    @media (max-width: 1000px) {
+      padding-right: 0;
+      gap: 40px;
     }
     @media (max-width: 991.98px) {
       display: grid;
       grid-template-columns: auto auto auto;
 
-      padding-right: calc(
-        0px + (65 - 0) * ((100vw - 567.98px) / (991.98 - 567.98))
-      );
-      padding-left: calc(
-        0px + (65 - 0) * ((100vw - 567.98px) / (991.98 - 567.98))
-      );
+      padding: 20px 65px;
 
-      column-gap: calc(
-        40px + (60 - 40) * ((100vw - 767.98px) / (991.98 - 767.98))
-      );
+      column-gap: 60px;
       row-gap: 12px;
 
       .product-banner__preview {
@@ -535,12 +561,14 @@ input,
     @media (max-width: 667.98px) {
       padding-left: 0;
       padding-right: 0;
+      column-gap: 50px;
+      padding: 20px 32px;
     }
     @media (max-width: 567.98px) {
       grid-template-columns: auto auto;
       align-items: flex-start;
       row-gap: 10px;
-      column-gap: calc(16px + (60 - 16) * ((100vw - 320px) / (567.98 - 320)));
+      padding: 20px 0;
 
       .product-banner__preview {
         grid-row: span 4;
@@ -564,6 +592,12 @@ input,
       text-decoration-line: line-through;
       margin-right: 10px;
     }
+    @media (max-width: 480px) {
+      column-gap: 32px;
+    }
+    @media (max-width: 360px) {
+      column-gap: 16px;
+    }
   }
 
   .product-actions {
@@ -579,10 +613,15 @@ input,
     }
   }
 
+  .product-status {
+    z-index: 99;
+    pointer-events: none;
+  }
   &__preview {
     width: 104px;
     display: flex;
     flex-direction: column;
+    position: relative;
 
     @media (min-width: 667.98px) {
       .product-actions {
@@ -612,7 +651,7 @@ input,
   &__title {
     color: $dark;
     font-family: Gilroy;
-    font-size: 14px;
+    font-size: 1.15em;
     font-style: normal;
     font-weight: 700;
     line-height: 150%; /* 21px */
@@ -623,10 +662,10 @@ input,
     gap: 10px;
     color: $dark;
     font-family: Gilroy;
-    font-size: 14px;
+    font-size: 1em;
     @media (max-width: 480px) {
-      font-size: calc(11px + (14 - 11) * ((100vw - 320px) / (480 - 320)));
-      gap: calc(4px + (10 - 4) * ((100vw - 320px) / (480 - 320)));
+      font-size: 0.85em;
+      gap: 4px;
     }
     font-style: normal;
     font-weight: 600;
@@ -643,7 +682,7 @@ input,
     img {
       width: 18px;
       @media (max-width: 480px) {
-        width: calc(12px + (18 - 12) * ((100vw - 320px) / (480 - 320)));
+        width: 12px;
       }
 
       transition: transform ease $animSpeed;
@@ -676,7 +715,7 @@ input,
     span {
       color: #a5abb7;
       font-family: Gilroy;
-      font-size: 13px;
+      font-size: 1em;
       font-weight: 500;
       line-height: 200%;
 
@@ -688,9 +727,15 @@ input,
   &__price {
     color: $dark;
     font-family: Gilroy;
-    font-size: 24px;
+    font-size: 1.715em;
     @media (max-width: 991.98px) {
-      font-size: calc(16px + (24 - 16) * ((100vw - 320px) / (991.98 - 320)));
+      font-size: 1.6em;
+    }
+    @media (max-width: 767.98px) {
+      font-size: 1.5em;
+    }
+    @media (max-width: 480px) {
+      font-size: 1.4em;
     }
     font-style: normal;
     font-weight: 700;
@@ -705,7 +750,7 @@ input,
     &-row {
       color: #a5abb7;
       font-family: Gilroy;
-      font-size: 13px;
+      font-size: 1em;
       font-style: normal;
       font-weight: 500;
       line-height: 150%;
@@ -876,7 +921,7 @@ input,
 
     color: #a5abb7;
     font-family: Gilroy;
-    font-size: 13px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: 150%;
@@ -906,7 +951,7 @@ input,
     left: 0;
     width: 100%;
 
-    padding: 12px 24px;
+    padding: 4px 0;
     border-radius: 5px;
     background-color: transparent;
     border: 1px solid #f6f7f8;
@@ -918,7 +963,7 @@ input,
 
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    //gap: 8px;
     z-index: 9999;
 
     transition: opacity ease $animSpeed, transform ease $animSpeed;
@@ -928,18 +973,19 @@ input,
   &__item {
     cursor: pointer;
     user-select: none;
+    padding: 4px 24px;
 
     color: $dark;
     font-family: Gilroy;
-    font-size: 13px;
+    font-size: 1em;
     font-style: normal;
     font-weight: 500;
     line-height: 150%;
 
-    transition: opacity ease $animSpeed;
+    transition: background-color ease $animSpeed;
 
     &:hover {
-      opacity: 0.6;
+      background-color: rgba(54, 52, 54, 0.1);
     }
   }
 }
@@ -955,7 +1001,15 @@ input,
   @media (max-width: 667.98px) {
     gap: 10px;
     column-gap: 60px;
-    column-gap: calc(15px + (60 - 15) * ((100vw - 320px) / (667.98 - 320)));
+  }
+  @media (max-width: 567.98px) {
+    column-gap: 46px;
+  }
+  @media (max-width: 480px) {
+    column-gap: 32px;
+  }
+  @media (max-width: 360px) {
+    column-gap: 15px;
   }
 
   .product-banner__headline {
@@ -963,8 +1017,7 @@ input,
     flex-direction: column;
     gap: 15px;
     @media (max-width: 667.98px) {
-      gap: 10px;
-      gap: calc(6px + (10 - 6) * ((100vw - 320px) / (667.98 - 320)));
+      gap: 6px;
     }
   }
   .product-banner__main {
@@ -978,9 +1031,9 @@ input,
     }
   }
   .product-banner__price {
-    font-size: 16px;
-    @media (max-width: 667.98px) {
-      font-size: calc(14px + (16 - 14) * ((100vw - 320px) / (667.98 - 320)));
+    font-size: 1.43em;
+    @media (max-width: 480px) {
+      font-size: 1.15em;
     }
   }
   .product-banner__info {
@@ -994,7 +1047,7 @@ input,
     }
   }
   .product-banner__preview {
-    position: relative;
+    position: relative !important;
 
     .product-status {
       opacity: 1;
@@ -1011,13 +1064,73 @@ input,
     flex: 0 0 12px;
     width: 12px;
   }
-  .product-banner__bullets {
-    justify-content: center;
-  }
 
   .sites-list {
     @media (max-width: 667.98px) {
       display: none;
+    }
+  }
+
+  .product-banner__button {
+    font-size: 1.14em;
+    min-height: 44px;
+    border-radius: 25px;
+    padding: 0 24px;
+  }
+}
+.product-slides {
+  .slider {
+    @media (max-width: 767.98px) {
+      z-index: 9;
+    }
+  }
+  .product-banner__bullets {
+    justify-content: center;
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    gap: 0;
+
+    @media (max-width: 767.98px) {
+      z-index: -9;
+    }
+
+    .slider-bullet {
+      flex: 1 1 auto;
+      position: relative;
+      height: 100%;
+      background-color: transparent;
+      transition: opacity ease $animSpeed;
+
+      &:hover {
+        opacity: 0.5;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        display: block;
+        width: calc(100% - 4px);
+        height: 2px;
+        top: auto;
+        left: 2px;
+        bottom: 0;
+
+        background-color: #edeef0;
+
+        transition: background-color ease $animSpeed;
+      }
+
+      &_active {
+        &::after {
+          background-color: $darkGrey;
+        }
+        &:hover {
+          opacity: 1;
+        }
+      }
     }
   }
 }
@@ -1058,7 +1171,7 @@ input,
   &__title {
     color: $darkGrey;
     font-family: Gilroy;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 700;
     line-height: 150%;
     transition: color ease $animSpeed;
@@ -1128,7 +1241,7 @@ input,
   &__label {
     color: $dark;
     font-family: Gilroy;
-    font-size: 12px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: 150%;
@@ -1184,7 +1297,7 @@ input,
   &__label {
     color: $dark;
     font-family: Gilroy;
-    font-size: 12px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: 150%;
@@ -1291,7 +1404,7 @@ input[type="number"]::-webkit-inner-spin-button {
         color: #a5abb7;
 
         font-family: Gilroy;
-        font-size: 12px;
+        font-size: 14px;
         font-weight: 500;
         line-height: 150%;
         text-transform: lowercase;
@@ -1303,7 +1416,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
         color: #363436;
         font-family: Gilroy;
-        font-size: 12px;
+        font-size: 14px;
         font-weight: 500;
         line-height: 150%;
       }
