--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -2900,6 +2900,7 @@
     flex-direction: column;
     gap: 30px;
     width: 378px;
+    padding-bottom: 20px;
     @media (max-width: 1200px) {
       width: calc(280px + (378 - 280) * ((100vw - 991.98px) / (1200 - 991.98)));
     }
