--- a/css/style.css
+++ b/css/style.css
@@ -5436,6 +5436,7 @@ input[type=number]::-webkit-inner-spin-button {
           flex-direction: column;
   gap: 30px;
   width: 378px;
+  padding-bottom: 20px;
 }
 @media (max-width: 1200px) {
   .article-blog-aside__wrapper {
